--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta charset="utf-8" />
+    <!-- 配置移动端 -->
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0, 
+      minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <title>project-in-vue</title>
   </head>
   <body>
+    <!-- 挂载点 -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
